examples/test/testpolicy17417.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17417
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key44: value26
      key3: value40
      key49: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value40
          key31: value26
          key35: value11
